@@ -1848,8 +1848,10 @@ Lists all of the skills, spells, languages, prayers, and/or songs \
 which your character presently qualifies for, but does not know, \
 along with the requirements to gain the new skill.  You can use the \
 parameter (spells, songs, chants, prayers, thief, skills, common, \
-expertises, etc) to get a more focused list (and, in the case of \
-expertises, to see the qualifications for each one).
+expertises, crafting, non-crafting, etc) to get a more focused list. \
+You can also use a domain name (illusion, trapping, blessing, etc) \
+to focus the list in that way.  Specifying the expertise parameter \
+will also show you the stat qualifications for each.
 
 QUIT=\
 Command : QUIT\n\r\
